tests/RESULTS-c2-nossl-fix-2026-06-12.txt
C2-FU — no-ssl-nginx compile fix: executed both-halves evidence
Date: 2026-06-12
Host: debian-vm (Linux arm64), nginx source 475732a3f, auto/configure --with-compat
(no --with-http_ssl_module), isolated CARGO_TARGET_DIR + NGINX_BUILD_DIR in
~/project-nginx-otel/c2fix-scratch (NOT /tmp).

Finding under test (C2 review FINDING 1, MEDIUM, latent):
src/cert_table.rs gated `use core::ffi::c_void;` behind #[cfg(ngx_feature="http_ssl")]
while the ungated asn1_integer_hex() uses c_void — a module build against a no-ssl
nginx cannot compile. Not exercised by any shipped/tested artifact (integration (e)
reuses the ssl-built .so); fix = unconditional import.

== BROKEN HALF (pre-fix) ==
GIT_COMMIT: 1ac4b8e (origin/main before fix)
Command: cargo check --release --lib  (NGINX_BUILD_DIR=<no-ssl builddir>)
Result:
  NOSSL_CHECK: FAIL
  error[E0425]: cannot find type `c_void` in this scope
  error: could not compile `ngx-otel-rust` (lib) due to 1 previous error

== FIXED HALF ==
GIT_COMMIT: 88e9fcd (C2-FU: fix no-ssl-nginx compile — unconditional c_void import)
Same command, same environment, after git pull:
  NOSSL_CHECK: PASS

== Regression (ssl path) ==
macOS: make check exit 0; cargo test --release --lib green (post-fix).
debian-vm: see unit-test run recorded alongside this commit.

Procedure notes (for future no-ssl checks):
- nginx git checkouts configure via auto/configure (not ./configure).
- plain `bash` over ssh lacks ~/.cargo/bin — export PATH inside the script.
